# pdf_with_sphinx

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
src/pdf_with_sphinx/: caped.yaml  kapoorlabs_proc.json
src/pdf_with_sphinx/output/proceedings/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_stats.json  proc.rst
src/pdf_with_sphinx/output/scipy/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_stats.json  vkc.bib
src/pdf_with_sphinx/papers/proceedings/: proc.rst
src/pdf_with_sphinx/publisher/: Makefile  build_html.py  build_paper.py  build_papers.py  build_template.py  conf.py  doitools.py  options.py  xreftools.py
src/pdf_with_sphinx/publisher/_templates/: slides.html.tmpl
src/pdf_with_sphinx/publisher/mail/: _mailer.py  mail_authors.py  mail_dois.py  mail_reviewers.py
src/pdf_with_sphinx/publisher/mail/templates/: reviewer-invite.txt.tmpl
src/pdf_with_sphinx/publisher/tempita/: __init__.py  _looper.py  compat3.py
src/pdf_with_sphinx/publisher/tests/: test_options.py
src/pdf_with_sphinx/publisher/writer/: __init__.py  code_block.py  rstmath.py  sphinx_highlight.py
