[metadata]
name = pdf_with_sphinx

description = Generate PDF with Sphinx for KapoorLabs documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kapoorlab/pdf_with_sphinx
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/kapoorlab/pdf_with_sphinx/issues
    Documentation = https://github.com/kapoorlab/pdf_with_sphinx#README.md
    Source Code = https://github.com/kapoorlab/pdf_with_sphinx
    User Support = https://github.com/kapoorlab/pdf_with_sphinx/issues

[options]
packages = find:
install_requires =
    sphinx
    lxml
    nameparser
    pygments
    pytest
    testpath
    ##### requirements with version specifiers
    docutils == 0.14


python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    pdf_with_sphinx = pdf_with_sphinx:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
